--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 body {
     position: relative;
-    background-color: #383e56;
+    background-color: #eedad1;
     text-align: center;
     font-family: 'Grenze', serif;
-    color: #f69e7b;
+    color: #383e56;
     margin: 0;
 }
 
 .top-container{
-    background-color: #32374e;
+    background-color: #383e56;
+    color: #f69e7b;
     padding-bottom: 0;
 
 }
@@ -35,7 +36,7 @@ h2, h3{
 }
 
 .top-cloud{
-    padding-top: 50px;
+    margin-top: 50px;
     position: relative;
     left: 23%;
 
@@ -45,16 +46,27 @@ h2, h3{
     left: 23%;
 }
 .mountain{
-    width: 80%;
-}
-.avatar{
-    padding-top: 200px;
-    width: 25%;
 
 }
-.coding {
+.avatar{
+    margin-top: 200px;
     width: 25%;
+    border-radius: 30%;
+
 }
-.linux{
+.coding-img {
     width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+.linux-img{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+.skill-row{
+    width: 50%;
+    margin: 100px auto 100px;
+    text-align: left;
 }
